# warsaw-hackathon-2026

./: .env.example  .gitignore  DEMO_SCENARIOS.md  Dockerfile.agent  Dockerfile.bills  Dockerfile.frontend  Dockerfile.voice  README.md  README_VOICE.md  create_commercial_bills.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  questions.json  requirements.txt  test_real_bills.py  voice_server.py
bill_intelligence/: main.py
bill_intelligence/tests/: test_bill_history_aggregator.py  test_bill_intelligence_api.py  test_bill_normalizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  types.ts
green_agent/: __init__.py  agent.py  green_agent_docs.md  heat_loss_tools.py  tools.py
green_agent/.adk/: session.db
heat_loss_estimator/geometry_service/: main.py
heat_loss_estimator/heat_loss_engine/: main.py
heat_loss_estimator/vision_service/: main.py  requirements.txt
scripts/: generate_embedding_gif.py
solar_client/: __init__.py  client.py  exceptions.py  models.py  solar_client_docs.md  usage_tracker.py
src/satellite_embedding/: __init__.py  connector.py  demo.py
static/: app.js  index.html  style.css
stitch_intake_onboarding/analysis_in_progress.../: code.html
stitch_intake_onboarding/analysis_loading.../: code.html
stitch_intake_onboarding/emerald_ledger/: DESIGN.md
stitch_intake_onboarding/emerald_verity/: DESIGN.md
stitch_intake_onboarding/home_simple_flow/: code.html
stitch_intake_onboarding/intake_step_2_uploads_1/: code.html
tests/: test_image_to_heat_loss.py
(+53 files in other folders)
